@@ -2,25 +2,27 @@ package ru.miroro.integration.cdek.deliverypoints;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.dao.DuplicateKeyException;
 import org.springframework.http.*;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 import ru.miroro.api.location.entity.Address;
+import ru.miroro.api.location.entity.City;
 import ru.miroro.api.location.repository.AddressRepository;
+import ru.miroro.api.location.repository.CityRepository;
 import ru.miroro.integration.cdek.access_token.CdekTokenService;
 
 @Slf4j
 @RequiredArgsConstructor
 @Service
 public class CdekDeliveryPointService {
+
     private final RestTemplate restTemplate;
     private final CdekTokenService tokenService;
     private final AddressRepository addressRepository;
+    private final CityRepository cityRepository;
 
     @Value("${cdek.auth.url}")
     private String apiBaseUrl;
@@ -44,26 +46,23 @@ public class CdekDeliveryPointService {
             return List.of();
         }
 
+        City city = cityRepository
+                .findById(cityUuid)
+                .orElseThrow(() -> new IllegalArgumentException("City not found: " + cityUuid));
+
         return Arrays.stream(deliveryPoints)
                 .map(dp -> dp.getLocation().getAddress())
-                .map(addressName -> saveAndReturn(addressName, cityUuid))
-                .collect(Collectors.toList());
+                .distinct()
+                .map(addressName -> saveAndReturn(addressName, city))
+                .toList();
     }
 
-    private Address saveAndReturn(String addressName, String cityUuid) {
+    private Address saveAndReturn(String addressName, City city) {
 
-        Address existing = addressRepository.findByName(addressName);
-        if (existing != null) {
-            return existing;
-        }
+        return addressRepository.findByAddress(addressName).orElseGet(() -> {
+            Address address = Address.builder().address(addressName).city(city).build();
 
-        try {
-            int id = addressRepository.save(addressName, cityUuid);
-            return new Address(id, addressName, cityUuid);
-
-        } catch (DuplicateKeyException e) {
-            log.debug("address '{}' already exists", addressName);
-            return addressRepository.findByName(addressName);
-        }
+            return addressRepository.save(address);
+        });
     }
 }
